# eely-hodi

./: .gitignore  .gitmodules  README.md
eely-hodi-esp/main/: CMakeLists.txt  Eelyapp.cpp  Eelyapp.h  main.cpp
eely-hodi-esp/main/Api/: DeviceInfoGetHodiHandler.cpp  DeviceInfoGetHodiHandler.h  DisplayImageGetHandler.cpp  DisplayImageGetHandler.h  DisplayImageSetHandler.cpp  DisplayImageSetHandler.h  DisplaySubtitleSetHandler.cpp  DisplaySubtitleSetHandler.h
eely-hodi-esp/main/Devices/: DeviceInstance.h  DeviceInstanceShelly.cpp  DeviceInstanceShelly.h  DeviceInstanceShelly3EM.cpp  DeviceInstanceShelly3EM.h  DeviceInstanceShellyEM.cpp  DeviceInstanceShellyEM.h  DeviceInstanceShellyEMGen1.cpp  DeviceInstanceShellyEMGen1.h  DeviceInstanceShellyEMGen3.cpp  DeviceInstanceShellyEMGen3.h  DeviceInstanceShellyHT.cpp  DeviceInstanceShellyHT.h  DeviceInstanceShellyPlugS.cpp  DeviceInstanceShellyPlugS.h  DeviceInstanceShellyPro3EM.cpp  DeviceInstanceShellyPro3EM.h  DeviceInstanceShellyProEM.cpp  DeviceInstanceShellyProEM.h  DeviceInstanceTibberPrice.cpp  DeviceInstanceTibberPrice.h
eely-hodi-esp/main/Logic/: Display.cpp  Display.h  DisplayLogic.cpp  DisplayLogic.h  Segment7.cpp  Segment7.h  Segment7Large.cpp  Segment7Large.h  SubtitleDisplayTextBase.cpp  SubtitleDisplayTextBase.h  SubtitleDisplayTextClimate.cpp  SubtitleDisplayTextClimate.h  SubtitleDisplayTextEnergy.cpp  SubtitleDisplayTextEnergy.h  SubtitleDisplayTextEnergyPrice.cpp  SubtitleDisplayTextEnergyPrice.h  SubtitleDisplayTextRssi.cpp  SubtitleDisplayTextRssi.h  SubtitleDisplayTextStatus.cpp  (+1 more)
(+63 files in other folders)
